[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-soc"
version = "0.1.0"
description = "Autonomous SOC for AI agent infrastructure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
sentinel = "sentinel.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

